--- a/package.json
+++ b/package.json
@@ -1,22 +1,52 @@
 {
   "name": "grape-analytics-dashboard",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint"
+    "start-static": "serve -c serve.json",
+    "lint": "tsc --noEmit && next lint"
   },
   "dependencies": {
-    "next": "12.0.3",
+    "@chakra-ui/react": "^1.7.1",
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@solana/web3.js": "^1.29.2",
+    "framer-motion": "^5.3.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "jimp": "^0.16.1",
+    "lodash": "^4.17.21",
+    "next": "^12.0.3",
+    "next-compose-plugins": "^2.2.1",
+    "next-optimized-images": "^2.6.2",
+    "next-videos": "^1.4.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^6.7.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-countdown": "^2.3.2",
+    "react-dom": "17.0.2",
+    "react-modal": "^3.14.3",
+    "react-player": "^2.9.0",
+    "responsive-loader": "^2.3.0"
   },
   "devDependencies": {
-    "@types/node": "16.11.7",
-    "@types/react": "17.0.34",
-    "eslint": "7",
-    "eslint-config-next": "12.0.3",
-    "typescript": "4.4.4"
-  }
+    "@types/react": "^17.0.25",
+    "@types/react-modal": "^3.12.1",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.4.1",
+    "serve": "^12.0.1",
+    "typescript": "4.4.3"
+  },
+  "browserslist": [
+    ">0.3%",
+    "not ie 11",
+    "not dead",
+    "not op_mini all"
+  ]
 }
