--- a/package.json
+++ b/package.json
@@ -10,27 +10,16 @@
     "lint": "tsc --noEmit && next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.7.1",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
-    "@solana/web3.js": "^1.29.2",
-    "framer-motion": "^5.3.0",
-    "imagemin-mozjpeg": "^9.0.0",
-    "imagemin-optipng": "^8.0.0",
-    "jimp": "^0.16.1",
-    "lodash": "^4.17.21",
+    "@mui/material": "^5.2.3",
+    "@mui/x-data-grid": "^5.2.0",
     "next": "^12.0.3",
     "next-compose-plugins": "^2.2.1",
-    "next-optimized-images": "^2.6.2",
-    "next-videos": "^1.4.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
     "react": "17.0.2",
-    "react-countdown": "^2.3.2",
-    "react-dom": "17.0.2",
-    "react-modal": "^3.14.3",
-    "react-player": "^2.9.0",
-    "responsive-loader": "^2.3.0"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.25",
@@ -42,11 +31,5 @@
     "prettier": "^2.4.1",
     "serve": "^12.0.1",
     "typescript": "4.4.3"
-  },
-  "browserslist": [
-    ">0.3%",
-    "not ie 11",
-    "not dead",
-    "not op_mini all"
-  ]
+  }
 }
