--- a/package.json
+++ b/package.json
@@ -10,19 +10,26 @@
     "lint": "tsc --noEmit && next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.6.0",
-    "@emotion/styled": "^11.6.0",
     "@emotion/cache": "latest",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@emotion/server": "latest",
-    "@mui/icons-material": "latest",
-    "@mui/material": "^5.2.3",
-    "@mui/x-data-grid": "^5.2.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.0.0",
+    "@mui/lab": "^5.0.0-alpha.50",
+    "@mui/material": "^5.0.0",
+    "@mui/styled-engine-sc": "^5.0.0",
+    "@mui/styles": "^5.0.1",
+    "@mui/x-data-grid": "^4.0.0",
+    "install": "^0.13.0",
+    "mui-datatables": "^4.0.0",
     "next": "^12.0.3",
     "next-compose-plugins": "^2.2.1",
+    "npm": "^8.3.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.25",
